[tool.poetry]
name = "brain-connectivity-system"
version = "2.0.0"
description = "AI-powered brain connectivity mapping with SIIBRA integration"
authors = ["sailohithgummi@gmail.com"]
packages = [{include = "brain_connectivity", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
httpx = "^0.25.2"
asyncio = "^3.4.3"
pandas = "^2.1.4"
numpy = "^1.25.2"
scikit-learn = "^1.3.2"
networkx = "^3.2.1"

# LLM and AI
litellm = "^1.12.0"
langgraph = "^0.6.0"
langchain = "^0.3"

# Database and Caching
sqlalchemy = "^2.0.23"
redis = "^5.0.1"
celery = "^5.3.4"

# Brain data (optional - install if available)
siibra = {version = "^1.0.0", optional = true}

# Development
pytest = {version = "^7.4.3", optional = true}
pytest-asyncio = {version = "^0.21.1", optional = true}
black = {version = "^23.11.0", optional = true}
flake8 = {version = "^6.1.0", optional = true}

[tool.poetry.extras]
siibra = ["siibra"]
dev = ["pytest", "pytest-asyncio", "black", "flake8"]
all = ["siibra", "pytest", "pytest-asyncio", "black", "flake8"]

[tool.poetry.scripts]
brain-connectivity = "brain_connectivity.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
